# rpipico_simple_PIO_emulator

./: README.md  _config.yml  emu_main.c  myapp.c  picopio_emu.h
_layout/: default.html
sample1/: CMakeLists.txt  howtomake.txt
sample1/emu/: emu_main.c  picopio_emu.h
sample1/emu/Project1/Project1/: Project1.vcxproj  Project1.vcxproj.filters
sample1/emu/Project1/Project1/x64/Release/: Project1.exe.recipe  Project1.iobj  Project1.ipdb
sample1/emu/Project1/Project1/x64/Release/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
sample1/emu/Project1/x64/Release/: in.csv  out.csv
sample1/src/: CMakeLists.txt
sample2/: CMakeLists.txt
sample2/emu/: emu_main2.c
sample2/emu/Project1/: Project1.sln
sample2/emu/Project1/Project1/: Project1.vcxproj  Project1.vcxproj.filters
sample2/emu/Project1/Project1/x64/Release/: Project1.exe.recipe  Project1.iobj  Project1.ipdb
sample2/emu/Project1/Project1/x64/Release/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
sample2/emu/Project1/x64/Release/: in2.csv  out2.csv  pio0_sm1.pio
sample2/src/: CMakeLists.txt  myapp.c  pio0_sm0.pio
